--- a/index.html
+++ b/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>按鈕顯示號碼</title>
+	<title>Random Numbers</title>
 	<script>
 		function generateNumbers() {
 			var numbers = [];
-			var number;
-			for (var i = 0; i < 9; i++) {
-				numbers.push([]);
-				for (var j = 0; j < 3; j++) {
-					do {
-						number = Math.floor(Math.random() * 12) + 1;
-					} while (numbers[i].includes(number));
-					numbers[i].push(number);
+			var result = "";
+			for (var i = 1; i <= 9; i++) {
+				numbers.push([i, [], []]);
+			}
+			for (var i = 1; i <= 3; i++) {
+				for (var j = 0; j < 9; j++) {
+					var num = Math.floor(Math.random() * 12) + 1;
+					if (numbers[j][1].indexOf(num) == -1 && numbers[j][2].indexOf(num) == -1) {
+						numbers[j][1].push(num);
+						if (numbers[j][1].length == 3) {
+							numbers[j][2] = numbers[j][1].slice(0);
+						}
+					} else {
+						j--;
+					}
 				}
 			}
-			var output = '';
 			for (var i = 0; i < numbers.length; i++) {
-				output += numbers[i].join(', ') + '<br>';
+				var line = "第" + numbers[i][0] + "場: ";
+				for (var j = 0; j < numbers[i][2].length; j++) {
+					line += numbers[i][2][j];
+					if (j < numbers[i][2].length - 1) {
+						line += ",";
+					}
+				}
+				result += line + "<br>";
 			}
-			document.getElementById('output').innerHTML = output;
+			document.getElementById("result").innerHTML = result;
 		}
 	</script>
 </head>
 <body>
-	<button onclick="generateNumbers()">產生號碼</button>
-	<br><br>
-	<div id="output"></div>
+	<button onclick="generateNumbers()">生成隨機數</button>
+	<div id="result"></div>
 </body>
 </html>
