--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 	<title>Random Numbers</title>
+	<style>
+    #result {
+        font-size: 30px;
+    }
+</style>
 	<script>
 		function generateNumbers() {
 			var numbers = [];
