--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Random Numbers</title>
+	<title>最強贏馬號碼</title>
 	<style>
     #result {
         font-size: 30px;
@@ -42,7 +42,7 @@
 	</script>
 </head>
 <body>
-	<button onclick="generateNumbers()">生成隨機數</button>
+	<button onclick="generateNumbers()">必贏號碼</button>
 	<div id="result"></div>
 </body>
 </html>
