--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     #result {
         font-size: 100px;
     }
+	#generate {
+			font-size: 100px;
+		}
 </style>
 	<script>
 		function generateNumbers() {
