--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<title>最強贏馬號碼</title>
 	<style>
-    #result {
-        font-size: 100px;
-    }
-	#generate {
+		#result {
+			font-size: 30px;
+		}
+		#generate {
 			font-size: 100px;
 		}
-</style>
+	</style>
 	<script>
 		function generateNumbers() {
 			var numbers = [];
@@ -45,7 +45,7 @@
 	</script>
 </head>
 <body>
-	<button onclick="generateNumbers()">必贏號碼</button>
+	<button id="generate" onclick="generateNumbers()">必贏號碼</button>
 	<div id="result"></div>
 </body>
 </html>
