--- a/index.html
+++ b/index.html
@@ -3,32 +3,39 @@
 <head>
 	<title>最強贏馬號碼</title>
 	<style>
-		button {
-			width: 100px;
+		#result {
+			font-size: 100px;
 		}
 	</style>
+	<script>
+		function generateNumbers() {
+			// Clear previous results
+			document.getElementById("result").innerHTML = "";
+			// Generate 9 rows
+			for (var i = 1; i <= 9; i++) {
+				var numbers = generateUniqueNumbers(1, 12, 3);
+				// Display the numbers for this row
+				var rowText = "第" + i + "場: " + numbers[0] + ", " + numbers[1] + ", " + numbers[2] + "<br>";
+				document.getElementById("result").innerHTML += rowText;
+			}
+		}
+
+		function generateUniqueNumbers(min, max, count) {
+			var numbers = [];
+			// Generate random unique numbers
+			while (numbers.length < count) {
+				var n = Math.floor(Math.random() * (max - min + 1) + min);
+				if (!numbers.includes(n)) {
+					numbers.push(n);
+				}
+			}
+			return numbers;
+		}
+	</script>
 </head>
 <body>
 	<h1>最強贏馬號碼</h1>
 	<button onclick="generateNumbers()">必贏號碼</button>
 	<div id="result"></div>
-
-	<script>
-		function generateNumbers() {
-			var resultDiv = document.getElementById("result");
-			resultDiv.innerHTML = "";
-
-			for (var i = 1; i <= 9; i++) {
-				var numbers = [];
-				while (numbers.length < 3) {
-					var randomNum = Math.floor(Math.random() * 12) + 1;
-					if (numbers.indexOf(randomNum) === -1) {
-						numbers.push(randomNum);
-					}
-				}
-				resultDiv.innerHTML += "第" + i + "場: " + numbers[0] + "," + numbers[1] + "," + numbers[2] + "<br>";
-			}
-		}
-	</script>
 </body>
 </html>
