--- a/index.html
+++ b/index.html
@@ -3,39 +3,49 @@
 <head>
 	<title>最強贏馬號碼</title>
 	<style>
-		#result {
-			font-size: 100px;
+		button, div {
+			display: block;
+			margin: 10px;
+			padding: 10px;
+			width: 100px;
 		}
 	</style>
-	<script>
-		function generateNumbers() {
-			// Clear previous results
-			document.getElementById("result").innerHTML = "";
-			// Generate 9 rows
-			for (var i = 1; i <= 9; i++) {
-				var numbers = generateUniqueNumbers(1, 12, 3);
-				// Display the numbers for this row
-				var rowText = "第" + i + "場: " + numbers[0] + ", " + numbers[1] + ", " + numbers[2] + "<br>";
-				document.getElementById("result").innerHTML += rowText;
-			}
-		}
-
-		function generateUniqueNumbers(min, max, count) {
-			var numbers = [];
-			// Generate random unique numbers
-			while (numbers.length < count) {
-				var n = Math.floor(Math.random() * (max - min + 1) + min);
-				if (!numbers.includes(n)) {
-					numbers.push(n);
-				}
-			}
-			return numbers;
-		}
-	</script>
 </head>
 <body>
-	<h1>最強贏馬號碼</h1>
-	<button onclick="generateNumbers()">必贏號碼</button>
-	<div id="result"></div>
+	<button id="winning-numbers-btn">必贏號碼</button>
+	<div id="winning-numbers"></div>
+
+	<script>
+		var btn = document.getElementById('winning-numbers-btn');
+		var numbersDiv = document.getElementById('winning-numbers');
+
+		function generateNumbers() {
+			var numbers = [];
+
+			for (var i = 1; i <= 9; i++) {
+				var rowNumbers = [];
+				while (rowNumbers.length < 3) {
+					var randomNum = Math.floor(Math.random() * 12) + 1;
+					if (!rowNumbers.includes(randomNum)) {
+						rowNumbers.push(randomNum);
+					}
+				}
+				rowNumbers.sort(function(a, b){return a-b});
+				numbers.push(rowNumbers);
+			}
+
+			var output = '';
+			for (var i = 0; i < numbers.length; i++) {
+				var rowOutput = '第' + (i+1) + '場: ';
+				rowOutput += numbers[i][0] + ', ';
+				rowOutput += numbers[i][1] + ', ';
+				rowOutput += numbers[i][2];
+				output += rowOutput + '<br>';
+			}
+			numbersDiv.innerHTML = output;
+		}
+
+		btn.addEventListener('click', generateNumbers);
+	</script>
 </body>
 </html>
