--- a/index.html
+++ b/index.html
@@ -1,33 +1,18 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>最強贏馬號碼</title>
-    <style>
-      button, p {
-        font-size: 100px;
-      }
-    </style>
-  </head>
-  <body>
-    <button onclick="generateNumbers()">必贏號碼</button>
-    <p id="numbers"></p>
-    <script>
-      function generateNumbers() {
-        var numbers = "";
-        for (var i = 1; i <= 9; i++) {
-          numbers += "第" + i + "場: ";
-          var randomNumbers = [];
-          while (randomNumbers.length < 3) {
-            var random = Math.floor(Math.random() * 12) + 1;
-            if (randomNumbers.indexOf(random) == -1) {
-              randomNumbers.push(random);
-            }
-          }
-          numbers += randomNumbers.join(",") + "<br>";
-        }
-        document.getElementById("numbers").innerHTML = numbers;
-      }
-    </script>
-  </body>
-</html>
+<form action="https://huggingface.com/api/upload" method="POST">
+  <label for="file_from">File From:</label>
+  <input type="text" id="file_from" name="file_from"><br><br>
+  
+  <label for="file_to">File To:</label>
+  <input type="text" id="file_to" name="file_to"><br><br>
+  
+  <label for="file_name">File Name:</label>
+  <input type="text" id="file_name" name="file_name"><br><br>
+  
+  <label for="branch">Branch:</label>
+  <input type="text" id="branch" name="branch"><br><br>
+  
+  <label for="token">Token:</label>
+  <input type="text" id="token" name="token"><br><br>
+  
+  <input type="submit" value="Push File">
+</form>
